# nisabo

./: .gitignore  Cargo.toml  README.md
.github/workflows/: main.yml
LICENSES/: DejaVu_Fonts_License.txt
src/: app.rs  app_eframe.rs  config.rs  constants.rs  db.rs  diff.rs  font.rs  main.rs  markdown.rs  metadata.rs  ui.rs  utils.rs
src/db/: crud.rs  database.rs  models.rs
src/export/: export.rs
src/import/: import.rs
src/io/: export.rs  import.rs
src/ui/: about.rs  custom_button.rs  export.rs  menu_bar.rs  menubar.rs  modal_add_new_note.rs  modal_history.rs  modal_rename_note.rs  modal_search.rs  notes.rs  settings.rs  sidepanels.rs  statusbar.rs  toggle_compact.rs  toolbar.rs  trash.rs
