[package]
name = "nisabo"
version = "0.1.0"
edition = "2024"

# links
homepage = "https://github.com/riccione/nisabo"
repository = "https://github.com/riccione/nisabo"
documentation = "https://github.com/riccione/nisabo"
license = "MIT"

[dependencies]
dirs = "6.0.0"
eframe = "0.31.1"
env_logger = "0.11.8"
log = "0.4.27"
rfd = "0.15.3"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.22"
